@@ -1,4 +1,7 @@
 2005-04-24  Brian Wellington <bwelling@xbill.org>
+	* common/map.[ch]: Add map_add_hex().
+
+2005-04-24  Brian Wellington <bwelling@xbill.org>
 	* common/gtk/guimap.[ch]: Add guimap_find_hex().
 
 2005-04-20  Brian Wellington <bwelling@xbill.org>
